--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.forsuredb.testapp" >
 
     <application
+        android:name=".App"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
@@ -17,7 +18,7 @@
         </activity>
 
         <provider
-            android:name=".TestContentProvider"
+            android:name=".contentprovider.TestContentProvider"
             android:authorities="com.forsuredb.testapp.content"
             android:enabled="true"
             android:exported="false" />
