--- a/compiler/build.gradle
+++ b/compiler/build.gradle
@@ -1,9 +1,12 @@
 apply plugin: 'java'
 
+sourceCompatibility = 1.7
+targetCompatibility = 1.7
+
 sourceSets {
     main {
         java {
-            srcDirs = ['src/main/java', '../forsuredblib/src/main/java']
+            srcDirs = ['src/main/java']
         }
     }
 }
@@ -12,6 +15,4 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
 
     compile 'org.apache.velocity:velocity:1.7'
-
-    compile project (':forsuredblib')
 }
