--- a/forsuredblib/build.gradle
+++ b/forsuredblib/build.gradle
@@ -21,4 +21,6 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.google.guava:guava:18.0'
+
+    compile project(':compiler')
 }
