--- a/forsuredblib/build.gradle
+++ b/forsuredblib/build.gradle
@@ -1,5 +1,8 @@
 apply plugin: 'com.android.library'
 
+group = 'com.fsryan.forsuredb'
+version = '0.0.1'
+
 android {
     compileSdkVersion 21
     buildToolsVersion "21.1.2"
@@ -7,9 +10,13 @@ android {
     defaultConfig {
         minSdkVersion 15
         targetSdkVersion 21
-        versionCode 1
-        versionName "1.0"
     }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_7
+        targetCompatibility JavaVersion.VERSION_1_7
+    }
+
     buildTypes {
         release {
             minifyEnabled false
