refactored the MigrationRetriever to be an interface with a factory

--- a/compiler/build.gradle
+++ b/compiler/build.gradle
@@ -12,10 +12,18 @@ sourceSets {
             srcDirs = ['src/main/java']
         }
     }
+    test {
+        java {
+            srcDirs = ['src/test/java']
+        }
+    }
 }
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
 
     compile 'org.apache.velocity:velocity:1.7'
+
+    testCompile 'junit:junit:4.12'
+    testCompile 'org.mockito:mockito-core:1.10.19'
 }
