--- a/build.gradle
+++ b/build.gradle
@@ -3,11 +3,15 @@
 buildscript {
     repositories {
         jcenter()
+        mavenLocal()
+        maven {
+            url  "http://dl.bintray.com/ryansgot/maven"
+        }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:1.2.3'
         classpath 'com.neenbedankt.gradle.plugins:android-apt:1.6'
-
+        classpath 'com.fsryan:forsuredbplugin:0.0.3'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
