use forsurecompiler version hosted on bintray

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,5 +45,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:21.0.3'
 
     compile project(':forsuredblib')
-    apt project(':compiler')
+    apt 'com.fsryan:forsuredbcompiler:0.0.1'
 }
