--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,7 @@ buildscript {
         classpath 'com.android.tools.build:gradle:1.2.3'
         classpath 'com.neenbedankt.gradle.plugins:android-apt:1.6'
         classpath 'com.fsryan:forsuredbplugin:0.0.3'
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.3.1'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -20,5 +21,8 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+        maven {
+            url  "http://dl.bintray.com/ryansgot/maven"
+        }
     }
 }
