--- a/compiler/build.gradle
+++ b/compiler/build.gradle
@@ -1,10 +1,13 @@
 apply plugin: 'java'
+apply plugin: 'maven'
+apply plugin: 'maven-publish'
+apply plugin: 'com.jfrog.bintray'
 
-group = 'com.fsryan.forsuredb'
+group = 'com.fsryan'
 version = '0.0.1'
 
-sourceCompatibility = 1.7
-targetCompatibility = 1.7
+sourceCompatibility = JavaVersion.VERSION_1_7
+targetCompatibility = JavaVersion.VERSION_1_7
 
 sourceSets {
     main {
@@ -26,4 +29,41 @@ dependencies {
 
     testCompile 'junit:junit:4.12'
     testCompile 'org.mockito:mockito-core:1.10.19'
+}
+
+bintray {
+    user = bintrayUser
+    key = bintrayApiKey
+    publications = ['forsuredbcompilerPublication']
+    pkg {
+        repo = 'maven'
+        name = 'forsuredbcompiler'
+        licenses = ['Apache-2.0']
+        vcsUrl = 'https://github.com/ryansgot/forsuredb.git'
+        publicDownloadNumbers = true
+        version {
+            name = '0.0.1'
+            desc = 'Guts of the ForSureDB project, containing code to generate source and assets'
+            released  = new Date()
+            vcsTag = 'v0.0.1'
+        }
+    }
+}
+
+
+publishing {
+    publications {
+        forsuredbcompilerPublication(MavenPublication) {
+            from components.java
+            groupId = 'com.fsryan'
+            artifactId = 'forsuredbcompiler'
+            version = '0.0.1'
+        }
+    }
+}
+
+task release(dependsOn: bintrayUpload) {
+    doLast {
+        println("Uploaded to bintray")
+    }
 }
