--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,6 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:21.0.3'
 
-    compile project(':forsuredblib')
+    compile 'com.fsryan:forsuredbandroid:0.0.1'
     apt 'com.fsryan:forsuredbcompiler:0.0.1'
 }
