--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,6 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:21.0.3'
 
-    compile 'com.fsryan:forsuredbandroid:0.0.1'
-    apt 'com.fsryan:forsuredbcompiler:0.0.1'
+    compile project(':forsuredbandroid')
+    apt project(':compiler')
 }
