completed doc for TableGenerator generated class methods

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <provider
+            android:name=".provider.TestappProvider"
+            android:authorities="com.forsuredb.testapp.content"
+            android:enabled="true"
+            android:exported="false" />
     </application>
 
 </manifest>
