--- a/compiler/build.gradle
+++ b/compiler/build.gradle
@@ -29,6 +29,7 @@ dependencies {
 
     testCompile 'junit:junit:4.12'
     testCompile 'org.mockito:mockito-core:1.10.19'
+    testCompile 'com.google.guava:guava:18.0'
 }
 
 bintray {
