--- a/compiler/build.gradle
+++ b/compiler/build.gradle
@@ -32,9 +32,17 @@ dependencies {
     testCompile 'com.google.guava:guava:18.0'
 }
 
+def bintrayUserCredential() {
+    return hasProperty('bintrayUser') ? getProperty('bintrayUser') : ''
+}
+
+def bintrayApiKeyCredential() {
+    return hasProperty('bintrayApiKey') ? getProperty('bintrayApiKey') : ''
+}
+
 bintray {
-    user = bintrayUser
-    key = bintrayApiKey
+    user = bintrayUserCredential()
+    key = bintrayApiKeyCredential()
     publications = ['forsuredbcompilerPublication']
     pkg {
         repo = 'maven'
@@ -50,7 +58,6 @@ bintray {
         }
     }
 }
-
 
 publishing {
     publications {
