--- a/forsuredbandroid/build.gradle
+++ b/forsuredbandroid/build.gradle
@@ -31,6 +31,9 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.google.guava:guava:18.0'
 
+    testCompile 'junit:junit:4.12'
+    testCompile 'org.mockito:mockito-core:1.9.5'
+
     compile project(':compiler')
 }
 
