create unit test for FSTableDescriber

--- a/forsuredbandroid/build.gradle
+++ b/forsuredbandroid/build.gradle
@@ -25,6 +25,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    testOptions {
+        unitTests.returnDefaultValues = true    // <-- Uri.parse() now returns null
+    }
 }
 
 dependencies {
