--- a/compiler/build.gradle
+++ b/compiler/build.gradle
@@ -4,7 +4,7 @@ apply plugin: 'maven-publish'
 apply plugin: 'com.jfrog.bintray'
 
 group = 'com.fsryan'
-version = '0.0.2'
+version = '0.0.3'
 
 sourceCompatibility = JavaVersion.VERSION_1_7
 targetCompatibility = JavaVersion.VERSION_1_7
@@ -47,10 +47,10 @@ bintray {
         vcsUrl = 'https://github.com/ryansgot/forsuredb.git'
         publicDownloadNumbers = true
         version {
-            name = '0.0.2'
+            name = '0.0.3'
             desc = 'Guts of the ForSureDB project, containing code to generate source and assets'
             released  = new Date()
-            vcsTag = 'v0.0.2'
+            vcsTag = 'v0.0.3'
         }
     }
 }
@@ -61,7 +61,10 @@ publishing {
             from components.java
             groupId = 'com.fsryan'
             artifactId = 'forsuredbcompiler'
-            version = '0.0.2'
+            version = '0.0.3'
+
+            artifact sourcesJar
+            artifact javadocJar
         }
     }
 }
@@ -84,6 +87,6 @@ artifacts {
 
 task release(dependsOn: bintrayUpload) {
     doLast {
-        println("Uploaded to bintray")
+        println("Huzzah! forsuredbcompiler was uploaded to bintray!")
     }
 }
