--- a/forsuredbandroid/build.gradle
+++ b/forsuredbandroid/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'android-maven'
 apply plugin: 'com.jfrog.bintray'
 
 group = 'com.fsryan'
-version = '0.0.2'
+version = '0.0.3'
 
 android {
     compileSdkVersion 21
@@ -31,14 +31,20 @@ android {
     }
 }
 
+configurations {
+    javadocSources
+}
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.google.guava:guava:18.0'
 
+    compile project(':compiler')
+
     testCompile 'junit:junit:4.12'
     testCompile 'org.mockito:mockito-core:1.9.5'
 
-    compile project(':compiler')
+    javadocSources 'com.google.guava:guava:18.0'
 }
 
 String bintrayUserCredential = hasProperty('bintrayUser') ? getProperty('bintrayUser') : ''
@@ -95,10 +101,10 @@ bintray {
 //        publish = true
         publicDownloadNumbers = true
         version {
-            name = '0.0.2'
+            name = '0.0.3'
             desc = 'An android library leveraging the forsuredb project'
             released  = new Date()
-            vcsTag = 'v0.0.2'
+            vcsTag = 'v0.0.3'
         }
     }
 }
@@ -111,6 +117,12 @@ task sourcesJar(type: Jar) {
 task javadoc(type: Javadoc) {
     source = android.sourceSets.main.java.srcDirs
     classpath += project.files(android.getBootClasspath().join(File.pathSeparator))
+    classpath.add(configurations.javadocSources.fileCollection {
+        include '**/*.jar'
+    })
+    for (File file : classpath.files) {
+        println("In Javadoc classpath: " + file.absolutePath)
+    }
 }
 
 task javadocJar(type: Jar, dependsOn: javadoc) {
@@ -126,6 +138,6 @@ artifacts {
 
 task release(dependsOn: bintrayUpload) {
     doLast {
-        println("Uploaded to bintray")
+        println("Huzzah! forsuredbandroid uploaded to bintray!")
     }
 }
