--- a/compiler/build.gradle
+++ b/compiler/build.gradle
@@ -26,10 +26,10 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
 
     compile 'org.apache.velocity:velocity:1.7'
+    compile 'com.google.guava:guava:18.0'
 
     testCompile 'junit:junit:4.12'
     testCompile 'org.mockito:mockito-core:1.10.19'
-    testCompile 'com.google.guava:guava:18.0'
 }
 
 String bintrayUserCredential = hasProperty('bintrayUser') ? getProperty('bintrayUser') : ''
