--- a/circle.yml
+++ b/circle.yml
@@ -1,6 +1,11 @@
 test:
+  pre:
+    - emulator -avd circleci-android22 -no-audio -no-window:
+        background: true
+        parallel: true
+    - circle-android wait-for-boot
   override:
-    - ./gradlew clean compileDebugJava :compiler:test :forsuredbandroid:test
+    - ./gradlew clean compileDebugJava :compiler:test :forsuredbandroid:test :forsuredbandroid:connectedAndroidTest
   post:
     - mkdir $CIRCLE_TEST_REPORTS/compiler
     - cp -r compiler/build/reports/* $CIRCLE_TEST_REPORTS/compiler
