--- a/compiler/build.gradle
+++ b/compiler/build.gradle
@@ -4,7 +4,7 @@ apply plugin: 'maven-publish'
 apply plugin: 'com.jfrog.bintray'
 
 group = 'com.fsryan'
-version = '0.1.1'
+version = '0.2.0'
 
 sourceCompatibility = JavaVersion.VERSION_1_7
 targetCompatibility = JavaVersion.VERSION_1_7
@@ -47,10 +47,10 @@ bintray {
         vcsUrl = 'https://github.com/ryansgot/forsuredb.git'
         publicDownloadNumbers = true
         version {
-            name = '0.1.1'
+            name = '0.2.0'
             desc = 'Guts of the ForSureDB project, containing code to generate source and assets'
             released  = new Date()
-            vcsTag = 'vc0.1.1'
+            vcsTag = 'v0.2.0'
         }
     }
 }
@@ -61,7 +61,7 @@ publishing {
             from components.java
             groupId = 'com.fsryan'
             artifactId = 'forsuredbcompiler'
-            version = '0.1.1'
+            version = '0.2.0'
 
             artifact sourcesJar
             artifact javadocJar
