--- a/circle.yml
+++ b/circle.yml
@@ -5,7 +5,7 @@ test:
         parallel: false
     - circle-android wait-for-boot
   override:
-    - ./gradlew clean compileDebugJava :compiler:test :forsuredbandroid:test :forsuredbandroid:connectedAndroidTest
+    - ./gradlew clean compileDebugJava :forsuredbandroid:test :forsuredbandroid:connectedAndroidTest
   post:
     - mkdir $CIRCLE_TEST_REPORTS/compiler
     - cp -r compiler/build/reports/* $CIRCLE_TEST_REPORTS/compiler
