--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,7 @@ android {
 forsuredb {
     applicationPackageName = 'com.forsuredb.testapp'
     resultParameter = "android.net.Uri"
+    recordContainer = "com.forsuredb.provider.FSContentValues"
     migrationDirectory = 'app/src/main/assets'
     appProjectDirectory = 'app'
 }
@@ -46,5 +47,5 @@ dependencies {
 
     compile project(':forsuredbandroid')
 
-    apt 'com.fsryan:forsuredbcompiler:0.3.1'
+    apt 'com.fsryan:forsuredbcompiler:0.4.0'
 }
