--- a/forsuredbandroid/build.gradle
+++ b/forsuredbandroid/build.gradle
@@ -33,6 +33,7 @@ android {
     packagingOptions {
         exclude 'META-INF/LICENSE.txt'
         exclude 'META-INF/NOTICE.txt'
+        exclude 'META-INF/services/javax.annotation.processing.Processor'
     }
 }
 
