--- a/forsuredbandroid/build.gradle
+++ b/forsuredbandroid/build.gradle
@@ -3,15 +3,15 @@ apply plugin: 'android-maven'
 apply plugin: 'com.jfrog.bintray'
 
 group = 'com.fsryan'
-version = '0.5.5'
+version = '0.6.0'
 
 android {
-    compileSdkVersion 21
-    buildToolsVersion "21.1.2"
+    compileSdkVersion 23
+    buildToolsVersion "23.0.3"
 
     defaultConfig {
         minSdkVersion 15
-        targetSdkVersion 21
+        targetSdkVersion 23
     }
 
     compileOptions {
@@ -43,6 +43,8 @@ configurations {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'com.android.support:recyclerview-v7:23.2.1'
+
     compile 'com.google.guava:guava:19.0'
 
     compile 'com.fsryan:forsuredbcompiler:0.5.2'
@@ -108,10 +110,10 @@ bintray {
 //        publish = true
         publicDownloadNumbers = true
         version {
-            name = '0.5.5'
+            name = '0.6.0'
             desc = 'An android library leveraging the forsuredb project'
             released  = new Date()
-            vcsTag = 'v0.5.5'
+            vcsTag = 'v0.6.0'
         }
     }
 }
