--- a/forsuredbandroid/build.gradle
+++ b/forsuredbandroid/build.gradle
@@ -2,8 +2,8 @@ apply plugin: 'com.android.library'
 apply plugin: 'android-maven'
 apply plugin: 'com.jfrog.bintray'
 
-group = 'com.fsryan'
-version = '0.6.4'
+group = 'com.fsryan.forsuredb'
+version = '0.7.0'
 
 android {
     compileSdkVersion 23
@@ -43,12 +43,12 @@ configurations {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:recyclerview-v7:23.2.1'
+    compile 'com.android.support:recyclerview-v7:23.4.0'
 
     compile 'com.google.guava:guava:19.0'
-    
-    compile 'com.fsryan:forsuredbcompiler:0.6.4'
-    compile 'com.fsryan.forsuredb:sqlitelib:0.1.0'
+
+    compile 'com.fsryan.forsuredb:forsuredbapi:0.7.0'
+    compile 'com.fsryan.forsuredb:sqlitelib:0.2.0'
 
     testCompile 'junit:junit:4.12'
     testCompile 'org.mockito:mockito-core:1.9.5'
@@ -110,10 +110,10 @@ bintray {
 //        publish = true
         publicDownloadNumbers = true
         version {
-            name = '0.6.4'
+            name = '0.7.0'
             desc = 'An android library leveraging the forsuredb project'
             released  = new Date()
-            vcsTag = 'v0.6.4'
+            vcsTag = 'v0.7.0'
         }
     }
 }
