--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
             </intent-filter>
         </activity>
         <provider
-            android:name="com.forsuredb.provider.FSDefaultProvider"
+            android:name="com.fsryan.fosuredb.provider.FSDefaultProvider"
             android:authorities="com.forsuredb.testapp.content"
             android:enabled="true"
             android:exported="false" />
