--- a/forsuredbandroid/build.gradle
+++ b/forsuredbandroid/build.gradle
@@ -69,7 +69,7 @@ install {
                 // Add your description here
                 name 'forsuredbandroid'
                 description 'An android library leveraging the forsuredb project'
-                url 'https://github.com/ryansgot/forsuredb'
+                url 'https://github.com/ryansgot/forsuredbandroid'
 
                 // Set your license
                 licenses {
@@ -86,9 +86,9 @@ install {
                     }
                 }
                 scm {
-                    connection 'https://github.com/ryansgot/forsuredb.git'
-                    developerConnection 'https://github.com/ryansgot/forsuredb.git'
-                    url 'https://github.com/ryansgot/forsuredb'
+                    connection 'https://github.com/ryansgot/forsuredbandroid.git'
+                    developerConnection 'https://github.com/ryansgot/forsuredbandroid.git'
+                    url 'https://github.com/ryansgot/forsuredbandroid'
                 }
             }
         }
