update to properly demonstrate doc store feature; bump versions appropriately

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,8 @@ forsuredb {
     recordContainer = "com.fsryan.fosuredb.provider.FSContentValues"
     migrationDirectory = 'app/src/main/assets'
     appProjectDirectory = 'app'
+    resourcesDirectory = 'app/src/main/resources'
+    fsJsonAdapterFactoryClass = 'com.forsuredb.testapp.model.TestJsonAdapterFactory'
 }
 
 dependencies {
