--- a/build.gradle
+++ b/build.gradle
@@ -6,11 +6,10 @@ buildscript {
         mavenLocal()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.1.2'
-        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.6'
+        classpath 'com.android.tools.build:gradle:2.3.2'
         classpath 'com.fsryan:forsuredbplugin:0.4.0'
         classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.3.1'
-        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.3'
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -26,5 +25,17 @@ allprojects {
             url "http://projectlombok.org/mavenrepo"
         }
         mavenLocal()
+    }
+}
+
+
+allprojects {
+    ext {
+        supportLibVersion = '25.3.1'
+
+        mockitoVersion = '1.10.19'
+
+        forsuredbVersion = '0.11.0'
+        forsuredbSqliteVersion = '0.5.0'
     }
 }
