--- a/circle.yml
+++ b/circle.yml
@@ -1,3 +1,6 @@
+machine:
+  java:
+    version: oraclejdk8
 dependencies:
   pre:
     - echo y | android update sdk --no-ui --all --filter tools,extra-android-m2repository
