--- a/forsuredbandroid/build.gradle
+++ b/forsuredbandroid/build.gradle
@@ -49,9 +49,10 @@ dependencies {
     compile "com.fsryan.forsuredb:sqlitelib:$forsuredbSqliteVersion"
 
     testCompile 'junit:junit:4.12'
+    testCompile 'com.google.guava:guava:20.0'
     testCompile "org.mockito:mockito-core:$mockitoVersion"
 
-    androidTestCompile 'com.google.guava:guava:19.0'
+    androidTestCompile 'com.google.guava:guava:20.0'
 
     javadocSources "com.fsryan.forsuredb:forsuredbapi:$forsuredbVersion"
     javadocSources "com.fsryan.forsuredb:sqlitelib:$forsuredbSqliteVersion"
